# c-on-air

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
example/: CMakeLists.txt  CoaController.cpp  CoaController.h  main.cpp
example/html/: homepage.html  index.html  login.html
example/html/ConAir/: ConAir.js
example/html/css/: index.css
example/html/js/: index.js  jquery.scrollTo.js  login.js
include/: ConAir.h
include/conair/: CoaJson.h
mediatmos/: CMakeLists.txt  CoaController.cpp  CoaController.h  main.cpp
mediatmos/html/: .project  index.html
mediatmos/html/css/: index.css
mediatmos/html/js/: index.js
src/: CMakeLists.txt  CoaJson.cpp  CoaServer.cpp  CoaServer.h
